--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@tarojs/taro-weapp": "1.2.23",
     "nerv-devtools": "^1.3.9",
     "nervjs": "^1.3.9",
+    "prop-types": "^15.7.2",
     "taro-ui": "^2.0.2"
   },
   "devDependencies": {
