--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@tarojs/taro-swan": "1.2.23",
     "@tarojs/taro-tt": "1.2.23",
     "@tarojs/taro-weapp": "1.2.23",
+    "lodash": "^4.17.11",
     "nerv-devtools": "^1.3.9",
     "nervjs": "^1.3.9",
     "prop-types": "^15.7.2",
